# routes/index.js
@@ -1,4 +1,17 @@
+const passport = require('passport');
+
 const router = require('express').Router();
+
+router.get("/login", passport.authenticate("github"), (req, res) => {});
+
+router.get("/logout", function(req, res, next) {
+  req.logout(function(err) {
+    if (err) { return next(err); }
+    res.redirect("/");
+  });
+});
+
+
 
 router.get('/', (req, res) => {
   res.status(200).send('Hello! Welcome to my website!');
@@ -20,5 +33,17 @@ router.use((err, req, res, next) => {
     error: 'Internal Server Error'
   });
 });
+
+router.get("/login", passport.authenticate("github"), (req, res) => {});
+
+router.get("/logout", function(req, res, next) {
+  req.logout(function(err) {
+    if (err) { return next(err); }
+    res.redirect("/");
+  });
+});
+
+
+
 
 module.exports = router;
